--- a/html/style.css
+++ b/html/style.css
@@ -4,8 +4,11 @@
 .nav-desktop {
   display: block;
 }
-
-
+/*
+body {
+  background-color: #333;
+}
+*/
 @media screen and (max-width: 600px) {
   .nav-mobile  {display: block;}
   .nav-desktop {display: none;}
@@ -13,30 +16,51 @@
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
-    overflow: hidden;
+  background-color: #333;
+  overflow: hidden;
 }
 
+.topsearch {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topsearch input, a {
+  background-color: #333;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: left;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  width: 100%;
+}
+
+.topsearch a:hover {
+  background-color: #ddd;
+  color: black;
+}
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+  background-color: #ddd;
+  color: black;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
-    display: none;
+  display: none;
 }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
